--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.8.1",
+    "rimraf": "^4.4.1",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-class-properties": "^7.25.4",
+    "@babel/plugin-transform-object-rest-spread": "^7.24.7",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/import-types-preset": "^3.0.0",
     "@graphql-codegen/typescript": "^4.0.9",
