--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     }
     
   },
-  "include": ["src","vite.config.ts"],
+  "include": ["src"],//  "include": ["src","vite.config.ts"],
   "references": [
     {
       "path": "./tsconfig.node.json"
