--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ant-design/icons": "^5.0.1",
     "@ant-design/plots": "^1.2.5",
     "@apollo/client": "^3.11.5",
+    "@dnd-kit/core": "^6.1.0",
     "@refinedev/antd": "^5.43.0",
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.47.1",
@@ -15,6 +16,7 @@
     "@refinedev/nestjs-query": "^1.1.1",
     "@refinedev/react-router-v6": "^4.5.5",
     "@types/graphql": "^14.5.0",
+    "@uiw/react-md-editor": "^4.0.4",
     "antd": "^5.0.5",
     "dayjs": "^1.11.13",
     "graphql": "^16.9.0",
