--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@ant-design/plots": "^1.2.5",
     "@apollo/client": "^3.11.5",
     "@dnd-kit/core": "^6.1.0",
+    "@pankod/refine-graphql": "^4.15.0",
     "@refinedev/antd": "^5.43.0",
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.47.1",
