--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@uiw/react-md-editor": "^4.0.4",
     "antd": "^5.20.6",
     "dayjs": "^1.11.13",
+    "express": "^4.20.0",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
     "graphql-ws": "^5.9.1",
     "i": "^0.3.7",
     "mongodb": "^6.8.1",
-    "mongoose": "^8.6.0",
+    "mongoose": "^8.6.1",
     "prettier": "^3.3.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
